# PyTWAT

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PYTWAT-PLAN.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.notes/: PYTWAT-PLAN.md
src/pytwat/: __main__.py
src/pytwat/core/: event_bus.py
src/pytwat/gui/: main_window.py
src/pytwat/gui/widgets/: bitmap_font.py  bitmap_terminal_widget.py  terminal_widget.py
src/pytwat/network/: telnet_client.py  terminal_emulator.py
tests/unit/: test_event_bus.py  test_terminal_emulator.py
