[project]
name = "pytwat"
version = "0.1.0"
description = "Modern Python telnet client for Trade Wars 2002 with automation features"
authors = [
    {name = "Chantal",email = "Chantal13@users.noreply.github.com"}
]
requires-python = "^3.11"
dependencies = [
    "pyqt6 (>=6.10.2,<7.0.0)",
    "pyte (>=0.8.2,<0.9.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)"
]

[project.scripts]
pytwat = "pytwat.__main__:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-qt (>=4.5.0,<5.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
